fix: enable overflow scroll to prevent <pre> tags breaking pages

--- a/theme/static/styles.css
+++ b/theme/static/styles.css
@@ -39,6 +39,7 @@ img {
 
 pre {
     border: 1px solid black;
+    overflow: scroll;
     padding: 0.5rem;
 }
 
